ポートフォオ_iwasawa14

--- a/css/style.css
+++ b/css/style.css
@@ -2763,7 +2763,8 @@ path {
 半円の高さを出したいと思い、高さを指定したところ伸び切ったところで半円が途切れてしまいます。
 画像の高さが足りないからでしょうか？余白を指定してみたりしたものの、解消することができませんでした。
 
-・また、上記の箇所フッター全体をリンクにしたいのですが、もっと上の部分を押しても別ページにとんでしまう。
+・上記の箇所フッター全体をリンクにしたいのですが、もっと上の部分を押しても別ページにとんでしまう。
+・上記の動きが、スマフォだと再生されなくなってしまいました。
 ・Websitteのページにも半円を反映しようとしたものの、単純にコピペしているつもりが配置がおかしかったりエラーが出てしまいます。
 同じ画像を使っていますが、数値の調整が必要なのでしょうか・・・
 
