ポートフォリオ_iwasawa16

--- a/css/style.css
+++ b/css/style.css
@@ -2198,7 +2198,7 @@ path {
   }
 
   .roop_wrapper06 {
-    bottom: 550px;
+    bottom: 350px;
   }
 
   /*WORKS SITE 1150px*/
@@ -2272,7 +2272,7 @@ path {
   }
   /*WORKS SITE 1150 あしらい０７*/
   .roop_wrapper07 {
-    bottom: 250px;
+    bottom: -100px;
   }
 
   /*ABOUT ME 1150 */
@@ -2776,8 +2776,12 @@ path {
     bottom: -100px;
   }
 
+  .roop_wrapper06 {
+    bottom: 280px;
+  }
+
   .roop_wrapper07 {
-    bottom: 100px;
+    bottom: 300px;
   }
 
   .roop_wrapper10 {
@@ -2791,18 +2795,11 @@ path {
 
 /*
 〜新しい質問〜
-・バナーページの半円のアニメーション部分作成ありがとうございました（すごい・・・
-半円の高さを出したいと思い、高さを指定したところ伸び切ったところで半円が途切れてしまいます。
-画像の高さが足りないからでしょうか？余白を指定してみたりしたものの、解消することができませんでした。
-
-・上記の箇所フッター全体をリンクにしたいのですが、もっと上の部分を押しても別ページにとんでしまう。
-・上記の動きが、スマフォだと再生されなくなってしまいました。
-・Websitteのページにも半円を反映しようとしたものの、単純にコピペしているつもりが配置がおかしかったりエラーが出てしまいます。
-同じ画像を使っていますが、数値の調整が必要なのでしょうか・・・
-
-・トップページ　ABOUTのボタンが押せなくなってしまいました・・・。
+①z-indexを大きくしているつもりですが、TOP WORKSボタン３つ目のボタンが押せなくなってしまいました。
 
 
+②iphoneでFVを確認したとき、ローディングページが終わって下スクロールした際に画像なのか画面なのかのかくつきを感じます。原因わかりますでしょうか？
+③ポートフォリオの作品ページ、画面拡大した際に半円の大きさが広がらない。幅が固定されてしまっているようですが、どこで指定されているか見つけられず・・・
 
 
 
